kind/8-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-boot-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /bookmarks-ui/(.*) $1 break;
      rewrite /api-gateway/(.*) /$1 break;
spec:
  rules:
    #-  host: "mybookmarks.com"
    -   http:
         paths:
           - pathType: Prefix
             path: "/bookmarks-ui"
             backend:
               service:
                 name: bookmarks-ui-svc
                 port:
                   number: 8080

    #- host: "api.mybookmarks.com"
    #-  http:
    #    paths:
           - pathType: Prefix
             path: "/api-gateway"
             backend:
              service:
                name: api-gateway-svc
                port:
                  number: 9090
